--- a/package.json
+++ b/package.json
@@ -1,15 +1,30 @@
 {
-  "name": "js-ts-code-quality-analysis",
+  "name": "code-health-meter",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
   "type": "module",
+  "files": [
+    "src",
+    "package.json",
+    "pnpm-lock.yaml",
+    ".gitignore",
+    "babel.config.cjs",
+    "eslint.config.js",
+    "LICENSE",
+    "README.md"
+  ],
   "scripts": {
     "scan": "node ./src/index.js",
     "lint": "eslint",
     "lint:fix": "eslint --fix"
   },
-  "keywords": [],
+  "keywords": [
+    "code analysis",
+    "maintenability index",
+    "cyclomatic complexity",
+    "halstead metrics"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
