--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -35,7 +35,6 @@ jobs:
       - run: npm install -g pnpm 
       - run: pnpm install
       - run: pnpm lint
-      - run: pnpm config set '//registry.npmjs.org/:_authToken' "${NPM_TOKEN}"
-      - run: pnpm publish --access public --no-git-checks
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
