--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "LICENSE",
     "README.md"
   ],
+  "bin": {
+    "code-health-meter": "src/index.js"
+  },
   "scripts": {
     "scan": "node ./src/index.js",
     "lint": "eslint",
