--- a/package.json
+++ b/package.json
@@ -34,15 +34,16 @@
     "@babel/core": "=7.18.6",
     "@babel/eslint-parser": "=7.24.6",
     "@babel/preset-env": "=7.23.6",
-    "eslint": "=7.5.0 || =8.0.0 || =9.0.0"
+    "eslint": "=7.5.0 || =8.0.0 || =9.0.0",
+    "madge": "^7.0.0"
   },
   "dependencies": {
-    "typhonjs-escomplex": "=0.1.0",
     "@typhonjs/babel-parser": "=0.2.0",
     "fs-extra": "=8.1.0",
     "globals": "=15.3.0",
     "globby": "=10.0.1",
     "lodash": "=4.17.21",
+    "typhonjs-escomplex": "=0.1.0",
     "unixify": "=1.0.0",
     "winston": "=3.13.0",
     "winston-daily-rotate-file": "=5.0.0"
