--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "code-health-meter",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "",
   "main": "src/index.js",
   "type": "module",
@@ -34,8 +34,7 @@
     "@babel/core": "=7.18.6",
     "@babel/eslint-parser": "=7.24.6",
     "@babel/preset-env": "=7.23.6",
-    "eslint": "=7.5.0 || =8.0.0 || =9.0.0",
-    "madge": "^7.0.0"
+    "eslint": "=7.5.0 || =8.0.0 || =9.0.0"
   },
   "dependencies": {
     "@typhonjs/babel-parser": "=0.2.0",
@@ -43,6 +42,7 @@
     "globals": "=15.3.0",
     "globby": "=10.0.1",
     "lodash": "=4.17.21",
+    "madge": "=7.0.0",
     "typhonjs-escomplex": "=0.1.0",
     "unixify": "=1.0.0",
     "winston": "=3.13.0",
