--- a/package.json
+++ b/package.json
@@ -38,16 +38,30 @@
   },
   "dependencies": {
     "@typhonjs/babel-parser": "=0.2.0",
+    "canvas": "=2.11.2",
+    "dependency-cruiser": "=16.4.1",
     "fs-extra": "=8.1.0",
     "globals": "=15.3.0",
     "globby": "=10.0.1",
+    "graphology": "=0.25.4",
+    "graphology-canvas": "=0.4.2",
+    "graphology-communities-louvain": "=2.0.1",
+    "graphology-components": "=1.5.4",
+    "graphology-metrics": "=2.3.1",
+    "graphology-svg": "=0.1.3",
     "jscpd": "=4.0.4",
-    "jsinspect": "^0.12.7",
+    "jsinspect": "=0.12.7",
     "lodash": "=4.17.21",
     "madge": "=7.0.0",
+    "ngraph.coarsen": "=1.5.0",
+    "ngraph.cw": "=2.0.0",
+    "ngraph.graph": "=20.0.1",
+    "ngraph.louvain": "=2.0.0",
+    "ngraph.path": "=1.5.0",
     "typhonjs-escomplex": "=0.1.0",
     "unixify": "=1.0.0",
     "winston": "=3.13.0",
-    "winston-daily-rotate-file": "=5.0.0"
+    "winston-daily-rotate-file": "=5.0.0",
+    "xml2js": "=0.6.2"
   }
 }
